Created a histogram showing the distribution of seats in planes leaving Chicago, IL

--- a/homework-02.Rmd
+++ b/homework-02.Rmd
@@ -223,8 +223,24 @@ planes <- readRDS("data/planes.rds")
 #join datasets
 joint2 <- inner_join(x = flights, y = planes, by = "tailnum")
 
-#questions: How do you remove NAs? why is none of the stuff im trying working?
+#investigate distribution of number of seats per plane
+joint2 %>%
+  ggplot(mapping = aes(x = seats)) +
+  geom_histogram(binwidth = 20, fill = "lightcoral") +
+  scale_x_continuous(breaks = pretty_breaks(n = 10)) +
+  theme_minimal() +
+  labs(title = "Distribution of Number of Seats in Airplanes",
+       subtitle = "Among Flights Leaving Chicago, IL",
+       x = "Number of Seats in Airplane",
+       y = "Number of Flights Departed",
+       caption = "Source: FAA Aircraft Registry and Bureau of Transportation Services")
 
+#create new variable indicating plane size
+```
+
+Looking at the distribution of seats per plane leaving Chicago might give us insights into the sizes of the different planes. We can see that roughly, the distribution is quadrimodal, with clusters of planes peaking roughly around 75 seats, 100 seats, 275 seats, and 375 seats. Based on this information, I construct a new variable, `size`, indicating the size of an airplane. I arbitrarily decide cutoffs for the four different clusters visualized in the histogram above at 125 seats, 225 seats, and 350 seats.
+
+```{r}
 #discarded code below
 
 joint6 <- joint2 %>%
@@ -249,6 +265,4 @@ length(unique(joint7$tailnum))
 
 ```
 
-
 Load the datasets and then join them such that each row is a flight out of Chicago. Use tailnum as the unique identifier to join by. The resulting dataset should contain flights with tailnums that exist in both datasets and should be named chi_flights_planes. Then, report the number of rows and columns in chi_flights_planes. (Note: It’s possible that not all flights in flights.rds have a corresponding plane in planes.rds.)
-
