--- a/homework-02.Rmd
+++ b/homework-02.Rmd
@@ -238,14 +238,10 @@ chi_flights_planes %>%
 
 #create new variable indicating plane size
 chi_flights_planes <- chi_flights_planes %>%
-  mutate(size = case_when(seats < 125 ~ "Small",
+  mutate(size = as.factor(case_when(seats < 125 ~ "Small",
                           seats >= 125 & seats < 250 ~ "Medium",
                           seats >= 250 & seats < 350 ~ "Large",
-                          seats >= 350 ~ "Jumbo"),
-         size_numeric = case_when(size == "Small" ~ 1,
-                                  size == "Medium" ~ 2,
-                                  size == "Large" ~ 3,
-                                  size == "Jumbo" ~ 4))
+                          seats >= 350 ~ "Jumbo")))
 ```
 
 Looking at the distribution of seats per plane leaving Chicago might give us insights into the sizes of the different planes. We can see that roughly, the distribution is quadrimodal, with clusters of planes peaking roughly around 75 seats, 100 seats, 275 seats, and 375 seats. Based on this information, I construct a new variable, `size`, indicating the size of an airplane. I arbitrarily decide cutoffs for the four different clusters visualized in the histogram above at 125 seats, 250 seats, and 350 seats.
@@ -253,20 +249,21 @@ Looking at the distribution of seats per plane leaving Chicago might give us ins
 ```{r exercise-4-visualization, dev = "ragg_png"}
 #recreate visualization
 chi_flights_planes %>%
-  group_by(size, size_numeric) %>%
+  group_by(size) %>%
   summarize(count = n()) %>%
   ggplot(mapping = aes(x = count,
                        y = fct_rev(size))) +
   geom_col(fill = "skyblue",
            width = 0.1) +
-  geom_text(aes(label = emoji("airplane"), group = size, size = size_numeric),
+  geom_text(aes(label = emoji("airplane"), group = size, size = size),
             hjust = 0.5,
             vjust = 0.25,
-            family = "EmojiOne") +
-  scale_size_
-  theme_minimal() +
+            family = "EmojiOne",
+            show.legend = FALSE) +
+  scale_size_manual(values = c(10,8,6.5,5,5)) +
   scale_x_continuous(breaks = seq(0, 120000, 20000),
                      label = comma) +
+  theme_minimal() +
   labs(title = "Number of Flights out of Chicago in 2020",
        subtitle = "By size of plane",
        y = "Plane Size",
