--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -25,37 +25,36 @@ olympics_data <- read_csv(here("data", "olympics.csv"))
 
 The dataset we’re analyzing is available on kaggle and contains historical data on the modern Olympic game including all games starting from Athens 1896 till 2016. This data was scraped from [www.sports-reference.com](www.sports-reference.com) in 2018 and wrangled by rgriffin. Until 1992, winter and summer games used to be held in the same year. Since 1992, both summer and winter games have been taking place in a 4-year cycle (an olympiad!), resulting in winter games in 1994, summer in 1996, then again winter in 1998, and so on. The data set contains rich information on worldwide participation in Olympic Games across the years. We choose it because we're interested in the Olympics, and we believe that first we can show political and historical trends influencing countries' performances. Second, we narrow down to the angle of gender issues to find out female participation and performance over the years and across countries.
 
-This data contains 271,116 observations and 15 variables. Each row contains data on an individual athlete participating in an individual Olympic event. There is data on 66 different sports, 1,184 different teams, 51 games, 230 different NOCs, 42 different host cities across 35 different years. The description of variables is included in the codebook in the `readme` file in the data folder in this repository.
+This data contains 271,116 observations and 15 variables. Each row contains data on an individual athlete participating in an individual Olympic event.To give a broad view, our data include information on 66 different sports, 1,184 different teams, 51 games, 230 different NOCs, 42 different host cities across 35 different years. 222,552 of the athletes participated in the summer games, while 48,564 participated in the winter season. The description of variables is included in the codebook in the `readme` file under the data folder in this repository.
 
 ```{r sum-data-1, message=FALSE, warning=FALSE, echo=FALSE}
+season <- olympics_data %>%
+  group_by(season) %>%
+   summarise(count=n())
 sum_table_1 <- data.frame(character = c("Total obs.", 
                                         "Total vars", 
                                         "No. of sports", 
                                         "No. of teams", 
                                         "No. of games", 
                                         "No. of NOCs",
-                                        "No. of hosting cities"), 
+                                        "No. of hosting cities", 
+                                        "No. of athletes (summer)",
+                                        "No. of athletes (winter)"), 
                           count = c(nrow(olympics_data), 
                                     ncol(olympics_data) - 1, 
                                     length(unique(olympics_data$sport)), 
                                     length(unique(olympics_data$team)),
                                     length(unique(olympics_data$games)),
                                     length(unique(olympics_data$noc)),
-                                    length(unique(olympics_data$city))))
+                                    length(unique(olympics_data$city)),
+                                    season$count[1],
+                                    season$count[2]))
 sum_table_1
 ```
 
-```{r message=FALSE, warning=FALSE, echo=FALSE}
-season <- olympics_data %>% 
-  group_by(season) %>%
-  summarize(count = n())
-length(unique(olympics_data$sport))
-```
+After excluding missing values, 72.5 percent of the participants in our data set are male whereas the rest are female. The average age of the athletes is 25.6 years, with the oldest athlete being 97 years old, and the youngest being 10 years old. The average athlete's height is 175.4cm, the maximum height is 226cm, and the minimum height is 127 cm. The average weight of an athlete is 70.7 kilograms, with the maximum being 214kg and the minimum being 25kg. 
 
-
-After excluding missing values, 72.5 percent of the participants in our data set are male whereas the rest are female. The average age of the athletes is 25.6 years, with the oldest athlete being 97 years old, and the youngest being 10 years old. The average athlete's height is 175.4cm, the maximum height is 226cm, and the minimum height is 127 cm. The average weight of an athlete is 70.7 kilograms, with the maximum being 214kg and the minimum being 25kg. 222,552 of the athletes participated in the summer games, while 48,564 participated in the winter season.
-
-```{r variable-description, message=FALSE, warning=FALSE, echo=FALSE}
+```{r sum-data-2, message=FALSE, warning=FALSE, echo=FALSE}
 #create dummy variables to ease statistical analysis
 olympics_data$sex_dummy <- ifelse(olympics_data$sex=="M", 1,0)
 vars_of_interest <- c("sex_dummy", "age", "height", "weight")
@@ -64,25 +63,6 @@ olympics_data %>%
   lapply(., function(i) summary(i, na.rm =TRUE)) %>% 
   do.call(rbind, .) %>%
   kable(digits = 3)
-olympics_data %>%
-  group_by(team) %>%
-   summarise(count=n())
-olympics_data %>%
-  group_by(sport) %>%
-   summarise(count=n())
-olympics_data %>%
-  group_by(city) %>%
-   summarise(count=n())
-# this gives the number of participants who participated in the games held in these cities
-olympics_data %>%
-  group_by(season) %>%
-   summarise(count=n())
-length(unique(olympics_data$sport))
-length(unique(olympics_data$team))
-length(unique(olympics_data$games))
-length(unique(olympics_data$year))
-length(unique(olympics_data$noc))
-length(unique(olympics_data$city))
 ```
 
 ## Questions
