Made some changes to the analysis plan for question 2 which fixes #2

--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -79,7 +79,7 @@ The following lays out our plan for answering each of the research questions. A 
 
 1. In a first step, we will construct a time-series plot comparing the number of medals won by the United States and the USSR/Russia and all other countries. We plot the variable ‘year’ on the x-axis and a newly created variable counting the number of gold medals per country on the y axis. Finally, different colors (or facets, to be determined) will indicate whether medals were won in the Summer Olympics or the Winter Olympics, as well as display cumulative medal wins. In a second step, we expand the same analysis to not only include the United States and the USSR/Russia, but to include member-states of both NATO and the Warsaw Pact. In order to do so, we will create a variable indicating whether a country is part of NATO, the Warsaw Pact, or non-aligned.
 
-2. We will construct two plots to assess the second set of questions. Our first plot, a time-series plot, will indicate the proportion of female to male athletes on the y axis and year of the Olympic games on the x axis. Furthermore, we will make use of the color aesthetic to color code different lines by continent. Our second plot will replicate the same basic structure, except on the y axis it will map the proportion of medals won by female athletes by continent, which is again indicated by the color aesthetic.
+2. We will construct two plots to assess the second set of questions. Our first plot, a time-series plot, will indicate the proportion of female to male athletes on the y axis and year of the Olympic games on the x axis. Furthermore, we will make use of the color aesthetic to color code different lines by continent. Our second plot will replicate the same basic structure, except on the y axis it will map the proportion of medals won by female athletes by continent, which is again indicated by the color aesthetic. Finally, we will also create a bar chart indicating the 15 countries with the highest number of female Olympic medalists.
 
 Note: Just to distinguish the exact variables used in explaining Q1 and Q2 so they are not completely overlapping, the potentially used variables are listed here:
 
