--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -16,7 +16,6 @@ library(stargazer) # nice regression outputs
 library(here) # simplifies relative file paths
 ```
 
-
 ## Dataset
 
 ```{r load-data, message=FALSE, warning=FALSE, echo=FALSE}
@@ -77,12 +76,18 @@ We're planning on creating graphs that will allows us to answer the following tw
 
 The following lays out our plan for answering each of the research questions. A major challenge that spans both of these questions is that as of now, the dataset does not include the names of the countries each athelete represents. We will be using country code data from [geonames.org](geonames.org) to match each country code in the `NOC` variable with a proper country name.
 
-1. In a first step, we will construct a time-series plot comparing the number of medals won by the United States and the USSR/Russia and all other countries. We plot the variable ‘year’ on the x-axis and a newly created variable counting the number of gold medals per country on the y axis. Finally, different colors (or facets, to be determined) will indicate whether medals were won in the Summer Olympics or the Winter Olympics, as well as display cumulative medal wins. In a second step, we expand the same analysis to not only include the United States and the USSR/Russia, but to include member-states of both NATO and the Warsaw Pact. In order to do so, we will create a variable indicating whether a country is part of NATO, the Warsaw Pact, or non-aligned.
+1. In a first step, we will construct a time-series plot comparing the number of medals won by the United States and the USSR/Russia and all other countries. We plot the variable ‘year’ on the x-axis and a newly created variable counting the normalized number of medals per country on the y axis. Finally, different colors (or facets, to be determined) will indicate whether medals were won in the Summer Olympics or the Winter Olympics, as well as display cumulative medal wins. In a second step, we expand the same analysis to not only include the United States and the USSR/Russia, but to include member-states of both NATO and the Warsaw Pact. In order to do so, we will create a variable indicating whether a country is part of NATO, the Warsaw Pact, or non-aligned.
+
+Considering the growing number of events in Olympics over time, we want to normalize the number of medals to account for changes in the number of events. There are multiple ways of normalization under consideration, all of which we plan to test in our analysis. The one we eventually choose will best help us convey a consistent story for this project.
+
+One approach is to divide the number of medals won by a country in a year by the total number of medals available in that particular year. This will ensure that, for example, a country winning 10 medals out of 50 in year x, and then winning 20 out of 100 medals a few years later doesn't necessarily show a performance improvement in terms of the success rate in Olympics, since the percentage of medals won remains the same. Another approach is to divide a country's medalists in a year by the total number of participants from that country in the same year. This country-level measure allows us to consider the potentially growing number of participants per country. A third approach would be to normalize around the average number of medals. This measure allows us to see how a country is doing relative to the global average. 
+
+In a more detailed way, we can also aggregate the events by disciplines to add more information for our time-series analysis, as long as the visualization is not overcomplicated. To do so we will create a new variable that groups the events by sports categories and summarize the number of medals won in each discipline for each country over years. This part can be illustrated through either colors or facets.
 
 2. We will construct two plots to assess the second set of questions. Our first plot, a time-series plot, will indicate the proportion of female to male athletes on the y axis and year of the Olympic games on the x axis. Furthermore, we will make use of the color aesthetic to color code different lines by continent. Our second plot will replicate the same basic structure, except on the y axis it will map the proportion of medals won by female athletes by continent, which is again indicated by the color aesthetic. Finally, we will also create a bar chart indicating the 15 countries with the highest number of female Olympic medalists.
 
 Note: Just to distinguish the exact variables used in explaining Q1 and Q2 so they are not completely overlapping, the potentially used variables are listed here:
 
-Q1: year/time, country (new variable derived from NOC), average number of medals per country (new), types of medals, seasons, NATO/Warsaw Pact member states (new)
+Q1: year, country (new variable derived from NOC), average number of medals per country (new), types of medals, seasons, NATO/Warsaw Pact member states (new)
 
 Q2: country (new variable derived from NOC), sex, continent (new), medal, year
